--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -4,21 +4,30 @@
 
 {% block body %}
 
-<section class="container-fluid">
-    <section class="row justify-content-center">
-      <section class="col-12 col-sm-6 col-md-3 title">
-        <a href="/"><h1>Personal Budget</h1></a>
-      </section>      
-    </section>
-    <section class="row justify-content-center">
-        <section class="col-12 col-sm-6 col-md-3">
-            <a href="/signup/new">Sign up</a> 
-        </section>
-        <section class="col-12 col-sm-6 col-md-3">
-            <a href="/login">log in</a>
-        </section>
-    </section>
-</section>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <h1 class="display-4">Personal Budget</h1>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card" >
+        <div class="card-body">
+          <h5 class="card-title">Create an account</h5>
+          <a href="/signup" class="btn btn-primary">Sign up</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">You can login</h5>
+          <a href="/login" class="btn btn-primary">Log in</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 
 
 
