--- a/App/Views/Login/new.html
+++ b/App/Views/Login/new.html
@@ -30,7 +30,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <div class="bottom-text">
-                  Don't have account? <a href="/signup/new">Sign up</a>
+                  Don't have account? <a href="/signup">Sign up</a>
                 </div>
               </form>
         </section>
