--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -53,7 +53,7 @@
                       <button type="submit" class="btn btn-primary btn-block">Submit</button>
 
                       <div class="bottom-text">
-                        Do have account? <a href="/login/new">Log in</a>
+                        Do have account? <a href="/login">Log in</a>
                       </div>
 
                     </form>
