--- a/App/Views/Balance/balanceNonStandard.html
+++ b/App/Views/Balance/balanceNonStandard.html
@@ -1,6 +1,7 @@
 {% extends "baseAfterLogin.html" %}
 
 {% block body %}
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">My Finances</a>
@@ -11,7 +12,7 @@
       
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                 <a class="nav-link" href="/start">Home</a>
                 </li>
                 <li class="nav-item">
@@ -20,7 +21,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/expense">Add Expense</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="/balance">Balance Sheet</a>
                 </li>
                 <li class="nav-item">
@@ -29,17 +30,39 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Log Out</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Period
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="/balance">Current Month</a>
+                      <a class="dropdown-item" href="/Balance/balancePreviousMonth">Previous Month</a>
+                      <a class="dropdown-item" href="/Balance/balanceCurrentYear">Current Year</a>
+                      <a class="dropdown-item" href="/Balance/balanceNonStandard">Non-standard</a>
+                    </div>
+                  </li>
             </ul>
             </div>
         </div>     
     </nav>
     <section class="container-fluid">
         <section class="row justify-content-center">
-          <section class="col-12 col-sm-6 col-md-3 title">
+          <section class="col-12 col-sm-6 col-md-6 col-lg-3 title">
            <h1>Personal Budget</h1>
           </section>      
         </section>
+        <section class="row justify-content-center">
+            <section class="col-12 col-sm-8 col-md-6 col-lg-4">
+                
+            </section>
       </section>
-      
+      {% block footer %}
+      <script>
+      $( function() {
+		$( "#datepicker" ).datepicker({ dateFormat: 'yy-mm-dd' });
+	    } );
+      </script>
+  {% endblock %}
 {% endblock %}
+
 
