--- a/App/Views/Expense/index.html
+++ b/App/Views/Expense/index.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/expense">Add Expense</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Balance Sheet</a>
+                    <a class="nav-link" href="/balance">Balance Sheet</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Settings</a>
