--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -11,18 +11,18 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
-      <div class="card" >
-        <div class="card-body">
-          <h5 class="card-title">Create an account</h5>
-          <a href="/signup" class="btn btn-primary">Sign up</a>
+      <div class="card mx-auto" >
+        <div class="card-body mx-auto">
+          <h5 class="card-title mx-auto">Create an account</h5>
+          <a href="/signup" class="btn btn-primary mx-auto" >Sign up</a>
         </div>
       </div>
     </div>
     <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">You can login</h5>
-          <a href="/login" class="btn btn-primary">Log in</a>
+      <div class="card mx-auto">
+        <div class="card-body mx-auto">
+          <h5 class="card-title mx-auto">You can login</h5>
+          <a href="/login" class="btn btn-primary mx-auto" >Log in</a>
         </div>
       </div>
     </div>
