--- a/App/Views/Login/new.html
+++ b/App/Views/Login/new.html
@@ -5,14 +5,14 @@
 
 
 {% block body %}
-<section class="container-fluid">
+<section class="container-fluid ">
   <section class="row justify-content-center">
-    <section class="col-12 col-sm-6 col-md-3 title">
+    <section class="col-12 col-sm-8 col-md-6 col-lg-4 title">
       <a href="/"><h1>Personal Budget</h1></a>
     </section>      
   </section>
     <section class="row justify-content-center">
-        <section class="col-12 col-sm-6 col-md-3">
+        <section class="col-12 col-sm-8 col-md-6 col-lg-4">
             <form class="form-container" action="/login/create" method="post"> 
                 <div class="form-group">
                   <label for="inputEmail">Email address</label>
