--- a/App/Views/Balance/index.html
+++ b/App/Views/Balance/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/balance">Balance Sheet</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Settings</a>
+                    <a class="nav-link" href="/settings">Settings</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Log Out</a>
