--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -2,20 +2,67 @@
 
 {% block title %}Sign up{% endblock %}
 
+{% block footer %}
+  <script>
+    $.validator.addMethod('validPassword',
+      function(value, element, param) {
+        if(value != '') {
+          if(value.match(/.*[a-z]+.*/i) == null) {
+            return false;
+          }
+          if(value.match(/.*\d+.*/) == null) {
+            return false;
+          }
+        }
+        return true;
+      },
+      'Must contain at least one letter and one number'
+    );
+    $(document).ready(function() {
 
+/**
+ * Validate the form
+ */
+$('#formSignup').validate({
+    rules: {
+        name: 'required',
+        email: {
+            required: true,
+            email: true,
+            remote: '/account/validate-email'
+        },
+        password: {
+            required: true,
+            minlength: 6,
+            validPassword: true
+        },
+        password_confirmation: {
+            equalTo: '#inputPassword'
+        }
+    },
+    messages: {
+        email: {
+            remote: 'Email already taken.'
+        }
+    }
+});
+});
+  </script>
+
+{% endblock %}
 
 {% block body %}
 
 
     <section class="container-fluid">
         <section class="row justify-content-center">
-          <section class="col-12 col-sm-6 col-md-3 title">
+          <section class="col-12 col-sm-8 col-md-6 col-lg-4 title">
             <a href="/"><h1>Personal Budget</h1></a>
           </section>      
         </section>
           <section class="row justify-content-center">
-              <section class="col-12 col-sm-6 col-md-3">
-                  <form class="form-container" action="/signup/create" method="post"> 
+              <section class="col-12 col-sm-8 col-md-6 col-lg-4">
+                  <form class="form-container" action="/signup/create" method="post" id="formSignup"> 
                     <div class="formTitle">
                       <h3>Sign up</h3>
                     </div>
@@ -28,8 +75,8 @@
 
                       <div class="form-group">
                         <label for="inputEmail">Email</label>
-                        <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Emal"
-                        value="{{ user.email }}" required aria-describedby="emailHelp">
+                        <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Email"
+                        value="{{ user.email }}"  aria-describedby="emailHelp">
                         <small id="emailHelp" class="form-text text-muted">{{user.errors.notEmail}}</small>
                         <small id="emailHelp" class="form-text text-muted">{{user.errors.repeatedEmail}}</small>
                       </div>
