--- a/App/Views/Settings/index.html
+++ b/App/Views/Settings/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Personal Budget</title>
+    <title>My Budget</title>
     
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="icon" href="/images/MB.png">
 </head>
 <body>
   
@@ -21,26 +23,39 @@
             </button>
         </div>
     {% endfor %}
+    <nav class="navbar navbar-expand-lg navbar-light navbarNew">
+      <div class="container">
+          <a class="navbar-brand" href="/start"><img src="/images/MyBudgetSmall.png"></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+    
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+              <a class="nav-link" href="/revenue">Add Revenue</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/expense">Add Expense</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/balance">Balance Sheet</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link activeItem" href="/settings">Settings</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/logout">Log Out</a>
+              </li>
+          </ul>
+          </div>
+      </div>     
+  </nav>
     
     <section class="container-fluid">
-        <section class="row ">
-          <section class="col-12 col-sm-2">
-              <div class="logo">
-                  <a href="/start"><h2>My Budget</h2></a>
-              </div>
-          </section>      
-        </section>
-        <section class="row ">
-            <section class="col-12 col-sm-2">
-                <div class="nav flex-column nav-pills navigation"  role="tablist" aria-orientation="vertical">
-                    <a class="nav-link "  href="/revenue" role="tab" aria-controls="v-pills-home" aria-selected="true">Add Revenue</a>
-                    <a class="nav-link"  href="/expense" role="tab" aria-controls="v-pills-profile" aria-selected="false">Add Expense</a>
-                    <a class="nav-link"  href="/balance" role="tab" aria-controls="v-pills-messages" aria-selected="false">Balance</a>
-                    <a class="nav-link active"  href="/settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
-                    <a class="nav-link" href="/logout" role="tab" aria-controls="v-pills-settings" aria-selected="false">Log Out</a>
-                  </div>
-            </section>
-            <section class="col-12 col-sm-10 settings">
+        <section class="row justify-content-center" style="margin-top: 5%;">
+            <section class="col-12 col-sm-10 col-md-8">
                 <div class="panel-group">
                     <div class="panel panel-default">
                       <div class="panel-heading">
@@ -50,7 +65,7 @@
                       </div>
                       <div id="collapse1" class="panel-collapse collapse">
                         <ul class="list-group">
-                          <table class="table" style="width: 100%;">
+                          <table class="table table-dark table-hover" style="width: 100%;">
                             <thead>
                               <tr>
                                 <th scope="col" style="width: 90%;">Name</th>
@@ -73,7 +88,7 @@
                         </table>
 
                         </ul>
-                        <button type="button" class="btn btn-primary btn-block addRevenuebnt">Add Category</button>
+                        <button type="button" class="btn btn-primary addRevenuebnt addbnt">Add Category</button>
                       </div>
                     </div>
                   </div>
@@ -87,7 +102,8 @@
                       </div>
                       <div id="collapse2" class="panel-collapse collapse">
                         <ul class="list-group">
-                          <table class="table" style="width: 100%;">
+                          <div class="table-responsive">
+                          <table class="table table-dark table-hover" style="width: 100%;">
                             <thead>
                               <tr>
                                 <th scope="col" style="width: 30%;">Name</th>
@@ -112,9 +128,9 @@
                           {% endfor%}
                         </tbody>
                         </table>
-
+                      </div>
                         </ul>
-                        <button type="button" class="btn btn-primary btn-block addExpensebnt">Add Category</button>
+                        <button type="button" class="btn btn-primary addExpensebnt addbnt">Add Category</button>
                       </div>
                     </div>
                     <div class="modal fade" id="addRevenue" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -155,7 +171,7 @@
                       </div>
                       <div id="collapse3" class="panel-collapse collapse">
                         <ul class="list-group">
-                          <table class="table" style="width: 100%;">
+                          <table class="table table-dark table-hover" style="width: 100%;">
                             <thead>
                               <tr>
                                 <th scope="col" style="width: 90%;">Name</th>
@@ -178,7 +194,7 @@
                         </table>
 
                         </ul>
-                        <button type="button" class="btn btn-primary btn-block addPaymentBnt">Add Payment</button>
+                        <button type="button" class="btn btn-primary addPaymentBnt addbnt">Add Payment</button>
                       </div>
                     </div>
                   </div>
@@ -192,7 +208,7 @@
                       </div>
                       <div id="collapse4" class="panel-collapse collapse">
                         <div >
-                            <button type="button" style="margin: 5px;" class="btn btn-primary btn-lg btn-block changeNameBtn">Change Name</button>  
+                            <button type="button" style="margin-bottom: 5px;" class="btn btn-primary addbnt changeNameBtn">Change Name</button>  
 
                             <div class="modal fade" id="changeName" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                               <div class="modal-dialog" role="document">
@@ -221,7 +237,7 @@
                         </div>   
 
                         <div >
-                            <button type="button" style="margin: 5px;" class="btn btn-primary btn-lg btn-block changeEmailBtn">Change Email</button>
+                            <button type="button" style="margin-bottom: 5px;" class="btn btn-primary addbnt changeEmailBtn">Change Email</button>
 
                             <div class="modal fade" id="changeEmail" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                               <div class="modal-dialog" role="document">
@@ -252,7 +268,7 @@
                         
 
                         <div >
-                          <button type="button" style="margin: 5px;" class="btn btn-primary btn-lg btn-block changePasswordBtn">Change Password</button>  
+                          <button type="button" style="margin-bottom: 5px;" class="btn btn-primary addbnt changePasswordBtn">Change Password</button>  
 
                           <div class="modal fade" id="changePassword" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
@@ -295,6 +311,11 @@
             </section>
       </section>
 
+      <footer class="footer2" style="margin-top: 25%;">
+        <div>© 2020 Copyright:
+          <a href="/">mybudget.marek-galganski.pl</a>
+        </div>
+      </footer>
       
 
 
