--- a/App/Views/baseAfterLogin.html
+++ b/App/Views/baseAfterLogin.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>My Budget</title>
 
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -12,13 +13,14 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" 
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <link rel="icon" href="/images/MB.png">
     {% block head %}
     {% endblock %}
 </head>
 <body>
 
     {% for message in flash_messages %}
-        <div class="alert alert-{{ message.type }}" role="alert">
+        <div class="alert alert-{{ message.type }}" role="alert" id="role">
             {{ message.body }}
         </div>
     {% endfor %}
@@ -36,6 +38,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+        $(document).ready(function(){
+
+            const example = document.getElementById('role')
+            const time = 2500
+            
+            setTimeout(() => {
+                example.style.display = 'none'
+            }, time)
+        });
+    </script>
     {% block footer %}
       
     {% endblock %}
