--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,26 @@
+body{
+  background-color: #1e1e1e !important;
+}
+.boxDescription{
+  background-color: #636363 !important;
+  color: white;
+}
+.boxForm{
+  background-color: #636363 !important;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  justify-content: center !important;
+}
+.box{
+  background-color: #636363 !important;
+  color: white;
+}
+.box a{
+  color: #0385f4;
+}
 .form-container{
     background: #fff;
     padding: 30px;
@@ -20,15 +43,161 @@ h1{
     margin-top: 10px;
 }
 .card{
-    min-height: 300px;
+    min-height: auto;
     margin-top: 20px;
 }
-.card-body h2{
+
+.logo {
     text-align: center;
-}
-.card-header{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px #000;
+    padding: 5px;
+  }
+  .navigation {
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px #000;
+    padding: 5px;
+  }
+  .settings {
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px #000;
+    padding: 5px;
+  }
+  .panel {
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px #000;
+    padding: 5px;
     text-align: center;
-}
-.first{
+    margin: 5px;
+  }
+  .footer {
+    position: fixed;
     text-align: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+  }
+  
+ .error{
+    color: firebrick;
+    font-weight: 500;
+  }
+ 
+  @media screen and (min-width: 990px){
+    .footer1{
+      position: fixed;
+      text-align: center;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      color: white;
+    }
+  }
+  @media screen and (max-width: 990px){
+    .footer1{
+      text-align: center;
+      width: 100%;
+      color: white;
+      margin-top: 20px;
+    }
+  }
+  .footer2{
+    text-align: center;
+      width: 100%;
+      color: white;
+      margin-top: 20px;
+  }
+.textStart{
+  padding: 100px;
+  
 }
+.navbar{
+  background: #636363;
+}
+.category{
+  vertical-align: middle;
+}
+.boxLimit{
+  margin-bottom: 10%;
+  padding: 5%;
+  border-radius: 10px;
+  background-color: #636363;
+  color: white;
+}
+.boxLimit p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.form-container {
+  box-shadow: 0px 0px 5px 0px #0385f4;
+}
+.navbar-light .navbar-nav .nav-link{
+  color: white;
+}
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #424242 !important;
+}
+.navbar-light .navbar-nav .nav-link .active {
+  color: #0385f4 !important;
+}
+h1{
+  color: white;
+  text-align: center;
+}
+h2{
+  color: white;
+  text-align: center;
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+}
+label{
+  color:white;
+}
+.panel{
+  padding: 0;
+}
+.active{
+  color:black !important;
+}
+.modal-body {
+  background-color: #424242;
+}
+.modal-header{
+  background-color: #424242;
+  color: white;
+}
+.modal-footer{
+  background-color: #424242;
+}
+.close {
+  color: white !important;
+  text-decoration: none;
+}
+.dropdown-menu.show {
+  background-color: #636363;
+  color: white;
+}
+.dropdown-item {
+  color: white !important;
+}
+.dropdown-item:hover{
+  color: #424242 !important;
+  background-color: #636363 !important;
+}
+.nav-link{
+  color: white !important;
+}
+.activeItem{
+  color: #424242!important;
+}
+.cursor:hover{
+  cursor: pointer;
+}
+.addbnt{
+  width: 40%;
+  margin-bottom: 1%;
+}
+
